# flowstate-plugin

./: .gitignore_local  CMakeLists.txt  FlowstatePlugin.jucer  LICENSE  README.md  README_local.md  SETUP.md  TASK3_IMPLEMENTATION_SUMMARY.md  TASK4_CHECKPOINT_SUMMARY.md  TASK5_IMPLEMENTATION_SUMMARY.md
.kiro/specs/flowstate-plugin/: .config.kiro  design.md  requirements.md  tasks.md
Builds/cmake/: CMakeCache.txt  FlowstatePlugin_vst3_helper  Makefile  cmake_install.cmake
Builds/cmake/FlowstatePlugin_artefacts/JuceLibraryCode/: Info.txt
Builds/cmake/FlowstatePlugin_artefacts/JuceLibraryCode/FlowstatePlugin_AU/: Info.plist
Builds/cmake/FlowstatePlugin_artefacts/JuceLibraryCode/FlowstatePlugin_VST3/: Info.plist
Builds/cmake/FlowstatePlugin_artefacts/JuceLibraryCode/Release/: Defs.txt
Builds/cmake/FlowstatePlugin_artefacts/Release/AU/FlowstatePlugin.component/Contents/: Info.plist
Builds/cmake/FlowstatePlugin_artefacts/Release/VST3/FlowstatePlugin.vst3/Contents/: Info.plist
Builds/cmake/FlowstatePlugin_artefacts/Release/VST3/FlowstatePlugin.vst3/Contents/Resources/: moduleinfo.json
Builds/cmake/FlowstatePlugin_artefacts/Release/VST3/FlowstatePlugin.vst3/Contents/_CodeSignature/: CodeResources
Builds/cmake/JUCE/: Makefile  cmake_install.cmake
Builds/cmake/JUCE/modules/: Makefile  cmake_install.cmake
Builds/cmake/JUCE/tools/: CMakeCache.txt  JUCEExportConfig.cmake  JUCEToolsExport.cmake  Makefile  cmake_install.cmake
Builds/cmake/JUCE/tools/modules/: Makefile  cmake_install.cmake
Builds/cmake/juce_binarydata_FlowstateWebUI/JuceLibraryCode/: BinaryData.h  BinaryData1.cpp  BinaryData2.cpp  BinaryData3.cpp  BinaryData4.cpp  BinaryData5.cpp  BinaryData6.cpp  input_file_list
Source/: Parameters.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/Bridge/: .gitkeep  ParameterBridge.cpp  ParameterBridge.h
Source/DSP/: .gitkeep  DelayEngine.cpp  DelayEngine.h  DuckingProcessor.cpp  DuckingProcessor.h  FeedbackProcessor.cpp  FeedbackProcessor.h  ModulationEngine.cpp  ModulationEngine.h  ReverbEngine.cpp  ReverbEngine.h  ReverseBuffer.cpp  ReverseBuffer.h  ShimmerProcessor.cpp  ShimmerProcessor.h  StereoWidthProcessor.cpp  StereoWidthProcessor.h
Tests/: AudioQualityPropertyTests.cpp  AudioQualityPropertyTests_verification.md  BUILDING.md  CMakeLists.txt  DAWCompatibilityTests.cpp  DelayEnginePropertyTests.cpp  DuckingProcessorPropertyTests.cpp  DuckingProcessorPropertyTests_verification.md  FeedbackProcessorPropertyTests.cpp  FeedbackProcessorPropertyTests_verification.md  FreezePropertyTests.cpp  FreezePropertyTests_verification.md  IMPLEMENTATION_SUMMARY.md  Makefile  ModulationEnginePropertyTests.cpp  ModulationEnginePropertyTests_verification.md  PluginProcessorIntegrationTest.cpp  QUICKSTART.md  README.md  ReverbEnginePropertyTests.cpp  ReverbEnginePropertyTests_verification.md  ShimmerProcessorPropertyTests.cpp  ShimmerProcessorPropertyTests_verification.md  SignalFlowPropertyTests.cpp  SignalFlowPropertyTests_verification.md  SignalPathIntegrationTests.cpp  StateManagementPropertyTests.cpp  StateManagementPropertyTests_verification.md  StereoWidthProcessorPropertyTests.cpp  StereoWidthProcessorPropertyTests_verification.md  run_tests.sh  test_verification.md
Tests/catch2/: catch.hpp
WebUI/: README.md  TESTING.md  VERIFICATION.md  index.html  test.html
WebUI/fonts/: .gitkeep  README.md
